[package]
name = "benchpress-rs"
version = "0.1.0"
authors = ["Peter Jaszkowiak <p.jaszkow@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "benchpress_rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
neon = "0.5.0"
benchpress_sys = { path = "../benchpress_sys" }
